minor fix with swagger" "
